# trinity-cli

./: INSTALL_FOR_RYAN.bat  README.md  pyproject.toml  trinity.bat
trinity_cli/: __init__.py  cli.py
trinity_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
